force-app/main/default/objects/Builder_Profile_Line_Items__c/Builder_Profile_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Builder Profile Line Item</label>
    <nameField>
        <label>Builder Profile Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builder Profile Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>