force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Adhesive__c.field-meta.xml
<CustomField>
    <fullName>Adhesive__c</fullName>
    <label>Adhesive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supplied to Installer</fullName>
            </value>
            <value>
                <fullName>Installer supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>