force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Bags_of_Float_Included__c.field-meta.xml
<CustomField>
    <fullName>Bags_of_Float_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bags of Float Included?</label>
    <type>Checkbox</type>
</CustomField>