force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Builder_Profile__c.field-meta.xml
<CustomField>
    <fullName>Builder_Profile__c</fullName>
    <label>Builder Profile</label>
    <referenceTo>Builder_Profile__c</referenceTo>
    <relationshipLabel>Builder Profile Line Items</relationshipLabel>
    <relationshipName>Builder_Profile_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>