force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Butler_s_Pantry_Included__c.field-meta.xml
<CustomField>
    <fullName>Butler_s_Pantry_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Butler&apos;s Pantry Inlcuded</label>
    <type>Checkbox</type>
</CustomField>