force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Charge_Cover_with_Paper_Cardboard__c.field-meta.xml
<CustomField>
    <fullName>Charge_Cover_with_Paper_Cardboard__c</fullName>
    <label>Charge Cover with Paper/Cardboard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Charged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>