force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Corner_Shelf_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Corner_Shelf_Specifics__c</fullName>
    <inlineHelpText>Required when &quot;Corner Shelf Included&quot; is checked</inlineHelpText>
    <label>Corner Shelf Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>