force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Cover_Floors_With__c.field-meta.xml
<CustomField>
    <fullName>Cover_Floors_With__c</fullName>
    <label>Cover Floors With</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>Nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>