force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Cover_with_Paper_Cardboard__c.field-meta.xml
<CustomField>
    <fullName>Cover_with_Paper_Cardboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover with Paper/Cardboard</label>
    <type>Checkbox</type>
</CustomField>