force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Height_of_Master_Walls__c.field-meta.xml
<CustomField>
    <fullName>Height_of_Master_Walls__c</fullName>
    <label>Height of Master Walls</label>
    <length>255</length>
    <type>Text</type>
</CustomField>