force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Height_of_Tub_Splash_Drop_in__c.field-meta.xml
<CustomField>
    <fullName>Height_of_Tub_Splash_Drop_in__c</fullName>
    <label>Height of Tub Splash (Drop-in)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>