force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Last_Revision__c.field-meta.xml
<CustomField>
    <fullName>Last_Revision__c</fullName>
    <label>Last Revision</label>
    <type>Date</type>
</CustomField>