force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Paper_Cardboard_Type__c.field-meta.xml
<CustomField>
    <fullName>Paper_Cardboard_Type__c</fullName>
    <label>Paper/Cardboard Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>