force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Reducers__c.field-meta.xml
<CustomField>
    <fullName>Reducers__c</fullName>
    <label>Reducers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Included</fullName>
            </value>
            <value>
                <fullName>Included (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>