force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Reducers_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Reducers_Specifics__c</fullName>
    <inlineHelpText>Required when &quot;Included&quot; is selected from the &apos;Reducers&apos; picklist</inlineHelpText>
    <label>Reducers Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>