force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Shoemold_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Shoemold_Specifics__c</fullName>
    <inlineHelpText>Required when &quot;Included&quot; is selected from the &apos;Shoemold&apos; picklist</inlineHelpText>
    <label>Shoemold Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>