force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Side_Walls_Included__c.field-meta.xml
<CustomField>
    <fullName>Side_Walls_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side Walls Included</label>
    <type>Checkbox</type>
</CustomField>