force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Tile (Backsplash)</fullName>
            </value>
            <value>
                <fullName>Tile (Floor)</fullName>
            </value>
            <value>
                <fullName>Tile (Wall)</fullName>
            </value>
            <value>
                <fullName>Vinyl (Plank)</fullName>
            </value>
            <value>
                <fullName>Vinyl (Sheet)</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>