force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/T_Molds__c.field-meta.xml
<CustomField>
    <fullName>T_Molds__c</fullName>
    <label>T-Molds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Included</fullName>
            </value>
            <value>
                <fullName>Included (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>