force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/T_Molds_Specifics__c.field-meta.xml
<CustomField>
    <fullName>T_Molds_Specifics__c</fullName>
    <inlineHelpText>Required when &quot;Included&quot; is selected from the &apos;T-Molds&apos; picklist</inlineHelpText>
    <label>T-Molds Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>