force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Trim_Included__c.field-meta.xml
<CustomField>
    <fullName>Trim_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trim Included</label>
    <type>Checkbox</type>
</CustomField>