force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Master Bathroom/Shower</fullName>
            </value>
            <value>
                <fullName>Standard Bathroom/Shower</fullName>
            </value>
            <value>
                <fullName>Pre-Finished Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>