force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Underlayment__c.field-meta.xml
<CustomField>
    <fullName>Underlayment__c</fullName>
    <label>Underlayment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardi</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>