force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Underlayment_on_2nd_Floor__c.field-meta.xml
<CustomField>
    <fullName>Underlayment_on_2nd_Floor__c</fullName>
    <label>Underlayment on 2nd Floor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1/4&quot;</fullName>
            </value>
            <value>
                <fullName>Hardi</fullName>
            </value>
            <value>
                <fullName>Durock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>