force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Underlayment_Other__c.field-meta.xml
<CustomField>
    <fullName>Underlayment_Other__c</fullName>
    <inlineHelpText>Required when &quot;Other&quot; is selected from the &apos;Underlayment&apos; picklist</inlineHelpText>
    <label>Underlayment (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>