force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/VP_to_Tile_Transition__c.field-meta.xml
<CustomField>
    <fullName>VP_to_Tile_Transition__c</fullName>
    <label>VP to Tile Transition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Included</fullName>
            </value>
            <value>
                <fullName>Included (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>