force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/VP_to_Tile_Transition_Specifics__c.field-meta.xml
<CustomField>
    <fullName>VP_to_Tile_Transition_Specifics__c</fullName>
    <inlineHelpText>Required when &quot;Included&quot; is selected from the &apos;VP to Tile Transition&apos; picklist</inlineHelpText>
    <label>VP to Tile Transition Specifics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>