force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Wing_Wall_Included__c.field-meta.xml
<CustomField>
    <fullName>Wing_Wall_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wing Wall Included</label>
    <type>Checkbox</type>
</CustomField>