force-app/main/default/objects/Builder_Profile_Line_Items__c/fields/Wood_Look_Default_Install__c.field-meta.xml
<CustomField>
    <fullName>Wood_Look_Default_Install__c</fullName>
    <label>Wood Look - Default Install</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Front to Back</fullName>
            </value>
            <value>
                <fullName>Side to Side</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>