force-app/main/default/objects/Builder_Profile_Line_Items__c/recordTypes/Builder_Profile_Line_Item_Record_Type_Carpet.recordType-meta.xml
<RecordType>
    <fullName>Builder_Profile_Line_Item_Record_Type_Carpet</fullName>
    <active>true</active>
    <label>Builder Profile Line Item Record Type (Carpet)</label>
</RecordType>