force-app/main/default/objects/Builder_Profile_Line_Items__c/recordTypes/Builder_Profile_Line_Item_Record_Type_Vinyl_Wood.recordType-meta.xml
<RecordType>
    <fullName>Builder_Profile_Line_Item_Record_Type_Vinyl_Wood</fullName>
    <active>true</active>
    <label>Builder Profile Line Item Record Type (Vinyl/Wood)</label>
</RecordType>