force-app/main/default/objects/Builder_Profile_Line_Items__c/validationRules/BP_Line_Item_Corner_Shelf_Incl_Specifics.validationRule-meta.xml
<ValidationRule>
    <fullName>BP_Line_Item_Corner_Shelf_Incl_Specifics</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Corner_Shelf_Included__c = TRUE,
  ISBLANK( Corner_Shelf_Specifics__c ))</errorConditionFormula>
    <errorDisplayField>Corner_Shelf_Specifics__c</errorDisplayField>
    <errorMessage>A value must be provided when &quot;Corner Shelf Included&quot; is checked.</errorMessage>
</ValidationRule>