force-app/main/default/objects/Builder_Profile_Line_Items__c/validationRules/BP_Line_Item_Shoemold_Included.validationRule-meta.xml
<ValidationRule>
    <fullName>BP_Line_Item_Shoemold_Included</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  Shoemold__c  ,&quot;Included&quot;),
ISBLANK(  Shoemold_Specifics__c ))</errorConditionFormula>
    <errorDisplayField>Shoemold_Specifics__c</errorDisplayField>
    <errorMessage>A value must be provided when &quot;Included&quot; is selected from &apos;Shoemold&apos; picklist.</errorMessage>
</ValidationRule>