force-app/main/default/objects/Builder_Profile_Line_Items__c/validationRules/BP_Line_Item_Underlayment_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>BP_Line_Item_Underlayment_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  Underlayment__c  ,&quot;Other&quot;),
ISBLANK( Underlayment_Other__c ))</errorConditionFormula>
    <errorDisplayField>Underlayment_Other__c</errorDisplayField>
    <errorMessage>A value must be provided when &quot;Other&quot; is selected from &apos;Underlayment&apos; picklist.</errorMessage>
</ValidationRule>